[package]
categories = [
  "embedded",
  "hardware-support",
  "no-std",
]
description = "HAL crate for the DA14531 microcontroller"
documentation = "https://docs.rs/da14531-sdk-macros"
edition = "2021"
keywords = [
  "cortex-m",
  "embedded",
  "da14531",
  "no_std",
]
license = "MIT"
name = "da14531-sdk-macros"
readme = "README.md"
repository = "https://github.com/rapitag/da14531-sdk-macros"
rust-version = "1.60"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0.38"
quote = "1.0.18"
syn = {version = "1.0.92", features = ["full", "extra-traits", "parsing", "derive"]}
