[package]
categories = [
  "embedded",
  "hardware-support",
  "no-std",
]
description = "DA14531 SDK macros for Rust"
documentation = "https://docs.rs/da14531-sdk-macros"
edition = "2021"
keywords = [
  "cortex-m",
  "embedded",
  "da14531",
  "no_std",
]
license = "MIT"
name = "da14531-sdk-macros"
readme = "README.md"
repository = "https://github.com/rapitag/da14531-sdk-macros"
rust-version = "1.60"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
indexmap = "2.2.2"
proc-macro-error = "1.0"
proc-macro2 = "1.0.38"
quote = "1.0.18"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
syn = {version = "1.0.92", features = ["full", "extra-traits", "parsing", "derive"]}
